--- a/week04/code/css/styles.css
+++ b/week04/code/css/styles.css
@@ -243,3 +243,35 @@ input:checked+.slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+.boxes{
+      
+    display: flex;
+    flex-direction: row;
+    }
+    
+    
+.box1{
+    border: solid;
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+    color: black;
+    background-color: red;
+    border-color: black;
+    font-size: 30px; 
+    /* margin-top: 100px; */
+    display: block;
+}
+
+
+.box2{
+    border: solid;
+width: 160px;
+height: 160px;
+    margin: 20px;
+    color: black;
+    background-color: red;
+    border-color: black;
+    font-size: 30px; 
+}
